tests/typing/fail/instance_eval_class_fail1.rb

class A
 @x = 2
end

x = A.instance_eval do @x.foo end

x + 2

